[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node"]
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.5
margin_top = 110.0
margin_right = 44.5
margin_bottom = 124.0
text = "Display Name"

[node name="IPInput" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -128.0
margin_top = 20.0
margin_right = 128.0
margin_bottom = 2.0
align = 1
max_length = 15
clear_button_enabled = true

[node name="NameInput" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -170.0
margin_right = 128.0
margin_bottom = -146.0
align = 1
max_length = 15
clear_button_enabled = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 59.0
margin_right = 128.0
margin_bottom = 14.0
text = "IP Address"
align = 1

[node name="ConnectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -130.0
margin_right = 128.0
margin_bottom = -100.0
text = "Connect"

[node name="IDDisplay" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -70.0
margin_bottom = 70.0
[connection signal="pressed" from="ConnectButton" to="." method="_on_Button_pressed"]
